# Wayland

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json  xmake.lua
examples/: CMakeLists.txt
examples/Common/: Common.cpp  Common.h
examples/Common/Camera/: Camera.h
examples/Common/SimpleModel/: Model.cpp  Model.h
examples/Common/stb_image/: stb_image.h  stb_image_write.h
examples/PathTracer/: CMakeLists.txt  Conversion.cu  Conversion.h  Param.h  PathTracer.cu  Random.h  main.cpp
examples/PathTracer/data/: cornell.mtl
examples/Phong/: CMakeLists.txt  Param.h  Phong.cu  main.cpp
scene/cornell-box/: cbox-texture.pbrt  cbox.pbrt
scene/dragon/: dragon-color.pbrt  dragon-glass.pbrt  dragon-metal-black.pbrt  dragon-metal-silver.pbrt  dragon.pbrt
scene/glass-of-water/: glass-of-water.pbrt
scene/kitchen/: kitchen.pbrt
scene/staircase/: staircase.pbrt
scene/staircase/textures/: Painting1.tga  Wood.tga  WoodPanel.tga
scene/veach-ajar/: ajar.pbrt
scene/veach-ajar/textures/: cherry-wood-texture.tga
scene/veach-bidir/: bidir.pbrt
scene/veach-mis/: mis-lambert.pbrt  mis-sphere.pbrt  mis.pbrt
scene/water-caustic/: water.pbrt
src/: CMakeLists.txt  xmake.lua
src/Backend/Optix/: CMakeLists.txt  xmake.lua
src/Backend/Optix/Core/: AccelStructure.cpp  AccelStructure.h  BuildInput.cpp  BuildInput.h  ContextManager.cpp  ContextManager.h  Denoiser.cpp  Denoiser.h  DenoiserHelper.h  Launcher.cpp  Launcher.h  Module-AutoConfig.cpp  Module.cpp  Module.h  Optix-All.h  Pipeline.cpp  Pipeline.h  ProgramConfig.h  ProgramGroup.cpp  ProgramGroup.h  SBTData.h  ShaderBindingTable.cpp  ShaderBindingTable.h  Transform.cpp  Transform.h  Traversable.h
src/Backend/Optix/Utils/DeviceUtils/: Camera.h  Constants.h  Payload.h
src/Backend/Optix/Utils/HostUtils/: AlignedByteBuffer.h  CommonHeaders.h  CompactVariant.h  DebugUtils.h  DeviceAllocators.cpp  DeviceAllocators.h  EnumUtils.h  ErrorCheck.cpp  ErrorCheck.h  SpecialMacros.h
src/Backend/Optix/Utils/UniUtils/: ConversionUtils.h  IntUtils.h  MathUtils.h
src/Frontend/: CMakeLists.txt  Camera.cpp  Camera.h  EasyRender.cpp  MainWindow.cpp  MainWindow.h  OptixManager.h  PBRTv3_SceneCommon.h  PrintUtils.cpp  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  Shape.cpp  Shape.h  Wayland.cpp  printUtils.h
src/Frontend/Core/: Camera.cpp  Camera.h  DeviceManager.cpp  DeviceManager.h  Light.cpp  Light.h  MainWindow.cpp  MainWindow.h  Material.cpp  Material.h  ProgramManager.h  Renderer-All.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  Wayland.cpp
src/Frontend/Device/: Camera.h  Common.h  Evaluate.h  Light.h  Material.h  Pdf.h  Random.h  Sample.h  Scene.h  Tonemap.h
src/Frontend/Programs/: Programs-All.h
src/Frontend/Programs/AO/: AO.cu  AOLaunchParams.h  AOProgramManager.cpp  AOProgramManager.h
src/Frontend/Programs/BDPT/: BDPT.cu  BDPT.h  BDPTLaunchParams.h  BDPTProgramManager.cpp  BDPTProgramManager.h
src/Frontend/Programs/PathTracing/: PathTracing.cu  PathTracingLaunchParams.h  PathTracingProgramManager.cpp  PathTracingProgramManager.h
src/Frontend/Programs/RandomWalk/: RandomWalk.cu  RandomWalkLaunchParams.h  RandomWalkProgramManager.cpp  RandomWalkProgramManager.h
src/Frontend/Programs/TestExamples/Color/: Color.cu  ColorLaunchParams.h  ColorProgramManager.cpp  ColorProgramManager.h
src/Frontend/Programs/TestExamples/Depth/: Depth.cu  DepthLaunchParams.h  DepthProgramManager.h  Param.h  TestIntegrator.cu
src/Frontend/Programs/TestExamples/Mesh/: Mesh.cu  MeshLaunchParams.h  MeshProgramManager.h
src/Frontend/Programs/TestExamples/Normal/: Normal.cu  NormalLaunchParams.h  NormalProgramManager.cpp  NormalProgramManager.h
src/Frontend/Programs/TestExamples/Simple/: Simple.cu  SimpleLaunchParams.h  SimpleProgramManager.h
src/Frontend/Programs/TestExamples/Texture/: Texture.cu  TextureLaunchParams.h  TextureProgramManager.cpp  TextureProgramManager.h
src/Frontend/Programs/TestExamples/WireFrame/: WireFrame.cu  WireFrameLaunchParams.h  WireFrameProgramManager.h
src/Frontend/Utils/: Common.h  MathConstants.h  PBRTv3_SceneCommon.h  PrintUtils.cpp  PrintUtils.h
