FILE(GLOB HostUtilsSrc Utils/HostUtils/*.cpp)
add_library(Optix-HostUtils STATIC ${HostUtilsSrc})
target_link_libraries(Optix-HostUtils PRIVATE spdlog::spdlog)

FILE(GLOB CoreSrc Core/*.cpp)
add_library(Optix-Core STATIC ${CoreSrc})
target_include_directories(Optix-Core PUBLIC Core Utils)
target_link_libraries(Optix-Core PUBLIC Optix-HostUtils spdlog::spdlog glm::glm)

option(OPTIX_DEV OFF)
option(NEED_RE2 "Re2 is a fast regex library; otherwise the standard library will be used, which is much slower." OFF)
if(OPTIX_DEV)
    if(NEED_RE2)
        find_package(re2 REQUIRED)
        target_compile_definitions(Optix-Core PRIVATE NEED_RE2)
        target_link_libraries(Optix-Core PRIVATE re2::re2)
    endif()
    target_compile_definitions(Optix-Core PRIVATE NEED_AUTO_PROGRAM_CONFIG)
endif()